--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@ header{'HTTP/1.1 404 Not Found'};
 
 <div class="blackout_update"></div>
 
-<div class="photo"><p align="center"><img src="icons/LOGO2.png" width="150"></p></div>
+<div class="photo"><p align="center"><img src="icons/logo-512x512.png" width="150"></p></div>
 
 <div class="text"><p>404 ERROR</p></div>
 
