--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>@eugeneviktorov</title>
     <link rel="stylesheet" href="index/main.css">
 
-    <link rel="apple-touch-icon" href="icons/apple-icon.png"/>
+    <link rel="apple-touch-icon" href="icons/apple-icon(192x192).png"/>
     <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png"/>
 	<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png"/>
 	<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png"/>
@@ -15,7 +15,7 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png"/>
 	<link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png"/>
 	<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png"/>
-    <link rel="apple-touch-icon" sizes="192x192" href="icons/apple-icon-precomposed.png"/>
+    <link rel="apple-touch-icon" sizes="192x192" href="icons/apple-icon-precomposed-192x192.png"/>
 	<link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png"/>
 	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png"/>
@@ -56,7 +56,7 @@
     <div class="tooltip_two">
         <bad onclick="myFunction_two()" onmouseout="outFunc_two()">
             <span class="tooltiptext" id="myTooltip_two" text="tempor_link"></span></bad>
-        <img src="index/icons/icon-mail.svg"></div></div>
+        <img src="index/icons/action-menu.svg"></div></div>
 
     <div class="page_photo"><img src="index/Photo-Profile.png" width="80" height="80" class="photo"></div>
 
@@ -86,7 +86,7 @@ I am engaged in the creation of one-page websites in a designer style. And I als
     <div class="tooltip_two">
         <bad onclick="myFunction_four()" onmouseout="outFunc_four()">
             <span class="tooltiptext" id="myTooltip_four" text="tempor_link"></span></bad>
-        <img src="index/icons/icon-mail.svg"></div></div>
+        <img src="index/icons/action-menu.svg"></div></div>
 
     <div class="page_photo"><img src="index/Photo-Profile.png" width="80" height="80" class="photo"></div>
 
@@ -118,7 +118,7 @@ Resume: Resume.pdf" id="myInput_three">
     <div class="tooltip_two">
         <bad onclick="myFunction_six()" onmouseout="outFunc_six()">
             <span class="tooltiptext" id="myTooltip_six" text="tempor_link"></span></bad>
-        <img src="index/icons/icon-mail.svg"></div></div>
+        <img src="index/icons/action-menu.svg"></div></div>
 
     <div class="page_photo"><img src="index/Photo-Profile.png" width="80" height="80" class="photo"></div>
 
